--- a/Task_auto_classif.ipynb
+++ b/Task_auto_classif.ipynb
@@ -2,29 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "a49dfabb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting google_trans_new\n",
-      "  Downloading google_trans_new-1.1.9-py3-none-any.whl (9.2 kB)\n",
-      "Installing collected packages: google-trans-new\n",
-      "Successfully installed google-trans-new-1.1.9\n"
-     ]
-    }
-   ],
-   "source": [
-    "! pip install google_trans_new"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
-   "id": "d1d1e249",
+   "id": "3e2da339",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f62b60d4",
+   "id": "1bc65dcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d8aa3942",
+   "id": "38bc8240",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e7505110",
+   "id": "5e17a99e",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef33575f",
+   "id": "f9d55fad",
    "metadata": {},
    "source": [
     "##### 1. Название столбцов желательно привести к  единому виду. Сейчас очень неудобно"
@@ -331,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "be1ec5de",
+   "id": "cf62593c",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fad64f8f",
+   "id": "d7f0311f",
    "metadata": {},
    "source": [
     "##### Создадим список англоязычный названий"
@@ -367,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "d5954ff3",
+   "id": "818e3e25",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "c2628ee6",
+   "id": "5b969ed1",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d176d2c9",
+   "id": "c2a0b70f",
    "metadata": {},
    "source": [
     "##### 2. Информация о датасете\n",
@@ -462,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4975aed4",
+   "id": "b041e160",
    "metadata": {},
    "source": [
     "##### 2.1 Признак type_car - целевая переменная."
@@ -471,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "7e87336e",
+   "id": "38799924",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9387e94f",
+   "id": "b1a3a503",
    "metadata": {},
    "source": [
     "Согласно заданию, нужно создать классификатор который будет распозновать 4 класса: \n",
@@ -534,8 +513,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "31642587",
+   "execution_count": 65,
+   "id": "3cb66975",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,37 +528,37 @@
     "    Возвращает преобразованную строку.\n",
     "    \n",
     "    '''\n",
-    "    pass"
+    "    # Приведем строку к нижнему регистру \n",
+    "    type_car.lower()\n",
+    "    \n",
+    "    # Назачение классов, и сразу на английском\n",
+    "    \n",
+    "    if 'седан' in type_car:\n",
+    "        return 'sedan'\n",
+    "    elif 'xетчбек' in type_car:\n",
+    "        return 'hatchback'\n",
+    "    elif 'кроссовер' in type_car:\n",
+    "        return 'crossover'\n",
+    "    elif 'внедорожник' in type_car or 'пикап' in type_car:\n",
+    "        return 'SUV'\n",
+    "    elif 'купе' in type_car:\n",
+    "        return 'coupe'\n",
+    "    elif 'вэн' in type_car:\n",
+    "        return 'van'\n",
+    "    elif 'универсал' in type_car:\n",
+    "        return 'wagon'\n",
+    "    elif 'родстер' in type_car:\n",
+    "        return 'roadster'\n",
+    "    elif 'кабриолет' in type_car:\n",
+    "        return 'cabriolet'\n",
+    "    else:\n",
+    "        return 'None_type'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d1a53a5e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acc23753",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ff05125",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
-   "id": "2bdd7a38",
+   "id": "7ef8dd8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58fe0cfa",
+   "id": "0cbc5c5f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -597,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f64391d1",
+   "id": "c1237eed",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -605,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "653c854a",
+   "id": "b0529908",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -613,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8ed5e91",
+   "id": "6188fe8a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -621,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6465065",
+   "id": "dd7868f8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -629,42 +608,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c31a8a44",
+   "id": "077c97e4",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "a8a2a6ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from google_trans_new import google_translator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "866c209e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "translator = google_translator()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "4c993a03",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list_for_trans = []\n",
-    "for col_name in df.columns[6:]:\n",
-    "    list_for_trans.append(col_name)"
-   ]
   }
  ],
  "metadata": {
